--- a/DockerFile
+++ b/DockerFile
@@ -8,6 +8,15 @@ RUN npm run build
 
 # production stage
 FROM nginx:stable-alpine as production-stage
+
+# Remove the default Nginx configuration
+RUN rm /etc/nginx/conf.d/default.conf
+
+# Copy the custom Nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/
+
+# Copy the built Vue app
 COPY --from=build-stage /app/dist /usr/share/nginx/html
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
